k8s/jaeger-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-ui-lb
  namespace: observability
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: jaeger
  ports:
    - name: http-ui
      port: 80
      targetPort: 16686
